# tree-sitter-jarl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.jarl  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jarl.pc.in
bindings/c/tree_sitter/: tree-sitter-jarl.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jarl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJarlTests/: TreeSitterJarlTests.swift
src/: grammar.json  node-types.json  parser.c
